--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - with:
+        with:
           submodules: recursive
       - name: Hugo setup
         uses: peaceiris/actions-hugo@v2.4.13
