--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: GH Pages 
+name: GH Pages
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 jobs:
   build:
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
+      - name: Trunk it
+        run: ./trunk check --ci-progress
       - name: Hugo setup
         uses: peaceiris/actions-hugo@v2.4.13
         with:
