--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ enableGitalk = true
 clientID = "99d748c1fcccff9846b6"
 clientSecret = "e8f9d8c738881f2277bfddda0398456d0325ed7b"
 repo = "https://github.com/z-shell/z-shell.github.io"
-owner = "ss-o"
+owner = "z-shell"
 admin = "ss-o"
 id = "location.pathname"
 labels = "gitalk"
