--- a/config.toml
+++ b/config.toml
@@ -27,9 +27,9 @@ enableGitalk = true
 
 [params.gitalk]
 clientID = "db9f3795bad94803ab16"
-clientSecret = "$CLIENT_SECRET"
+clientSecret = "e39f49813d624c008286c7316134a43b0c19614d"
 repo = "https://github.com/z-shell/z-shell.github.io"
-owner = "z-shell"
+owner = "ss-o"
 admin = "ss-o"
 id = "location.pathname"
 labels = "gitalk"
