--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ enableGitalk = true
 clientID = "db9f3795bad94803ab16"
 clientSecret = "e39f49813d624c008286c7316134a43b0c19614d"
 repo = "z-shell.github.io"
-owner = "z-shell"
+owner = "ss-o"
 admin = "ss-o"
 id = "location.pathname"
 labels = "gitalk"
