modified:   config.toml 	modified:   static/CNAME

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://z-shell.digitalclouds.dev/"
+baseURL = "https://github.zshell.dev/"
 languageCode = "en"
 title = "❮ ZI ❯"
 theme = "github-style"
@@ -15,7 +15,7 @@ twitter = "zshell_zi"
 #  linkedin = "ss-o"
 #  instagram = ""
 #  tumblr = ""
-email = "z-shell@digitalclouds.dev"
+email = "team@zshell.dev"
 url = "https://z.digitalclouds.dev"
 keywords = "A Swiss Army Knife for Zsh Unix shell."
 rss = false
