--- a/config.toml
+++ b/config.toml
@@ -2,13 +2,13 @@ baseURL = "https://github.zshell.dev"
 languageCode = "en"
 title = "❮ ZI ❯"
 theme = "github-style"
-#googleAnalytics = "G-MT10GVL59X"
+googleAnalytics = ""
 pygmentsCodeFences = true
 pygmentsUseClasses = true
 
 [params]
 author = "Z-Shell Community"
-description = "Open-source society passionate about Zsh, privacy-respecting, and decentralized internet."
+description = "A Swiss Army Knife for Zsh Unix shell, designed to glue everything together. A toolchain that works for us."
 #  github = "z-shell"
 #  facebook = ""
 #  twitter = "zshell_zi"
@@ -17,8 +17,8 @@ description = "Open-source society passionate about Zsh, privacy-respecting, and
 #  tumblr = ""
 email = "team@zshell.dev"
 url = "https://github.zshell.dev"
-keywords = "A Swiss Army Knife for Zsh Unix shell, designed to glue everything together. A toolchain that works for you and not against you."
-rss = false
+keywords = "zsh, github, toolchain"
+rss = true
 lastmod = true
 userStatusEmoji = ""
 favicon = "images/avatar.png"
@@ -38,17 +38,17 @@ enableGitalk = false
 # createIssueManually = false
 # distractionFreeMode = false
 [[params.links]]
- title = "Z-Shell"
- href = "https://github.com/z-shell"
- icon = "https://github.com/z-shell.png"
+title = "Z-Shell"
+href = "https://github.com/z-shell"
+icon = "https://github.com/z-shell.png"
 [[params.links]]
- title = "digital-clouds"
- href = "https://github,com/digital-clouds"
- icon = "https://github.com/digital-clouds.png"
+title = "digital-clouds"
+href = "https://github,com/digital-clouds"
+icon = "https://github.com/digital-clouds.png"
 [[params.links]]
- title = "ss-o"
- href = "https://github,com/ss-o"
- icon = "https://github.com/ss-o.png"
+title = "ss-o"
+href = "https://github,com/ss-o"
+icon = "https://github.com/ss-o.png"
 
 [frontmatter]
- lastmod = ["lastmod", ":fileModTime", ":default"]
+lastmod = ["lastmod", ":fileModTime", ":default"]
