modified:   .github/workflows/deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,6 @@ jobs:
     secrets:
       personal_token: ${{ secrets.GH_PAT }}
     with:
-      publish_branch: 'gh-pages'
-      publish_dir: 'public'
-      cname: 'github.zshell.dev'
+      publish_branch: "gh-pages"
+      publish_dir: "public"
+      cname: "github.zshell.dev"
