--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -9,7 +9,8 @@ repo:
 lint:
   linters:
     - name: markdownlint
-      command: [markdownlint, -q, --config, .trunk/.markdownlint.yaml, '${target}']
+      command:
+        [markdownlint, -q, --config, .trunk/.markdownlint.yaml, "${target}"]
       direct_configs: [.trunk/.markdownlint.yaml]
   enabled:
     - actionlint@1.6.12
@@ -23,6 +24,9 @@ lint:
   ignore:
     - linters: [ALL]
       paths:
+        - lib/**
+        - static/**
         - public/**
         - themes/**
+        - layouts/**/*.html
         - archetypes/**
