--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           hugo-version: latest
           extended: true
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: '16'
       - uses: actions/cache@v2
@@ -35,6 +35,7 @@ jobs:
             ${{ runner.os }}-node-
       - run: npm ci
       - run: hugo --minify
+  deploy:
     name: "🚀 Deploy"
     if: ${{ github.ref == 'refs/heads/main' }}
     uses: z-shell/.github/.github/workflows/deploy-call.yml@main
@@ -44,3 +45,4 @@ jobs:
       publish_branch: "gh-pages"
       publish_dir: "public"
       cname: "github.zshell.dev"
+    
