modified:   .github/workflows/deploy.yml 	renamed:    .markdownlint.yaml -> .trunk/.markdownlint.yaml 	modified:   .trunk/trunk.yaml 	modified:   content/readme.md 	modified:   layouts/404.html 	modified:   layouts/partials/gitalk.html

--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -28,5 +28,6 @@ lint:
         - static/**
         - public/**
         - themes/**
-        - layouts/**/*.html
+        - layouts/**
+        - partials/**
         - archetypes/**
