--- a/.github/workflows/trunk-call.yml
+++ b/.github/workflows/trunk-call.yml
@@ -1,30 +1,23 @@
 ---
-name: "♻️ Trunk Call"
+name: '🚀 Deploy Call'
 on:
-  workflow_dispatch:
   push:
-    branches: ["main"]
-    tags: ["v*.*.*"]
-  pull_request:
-    types: [opened, synchronize]
-#  schedule:
-#    - cron: 0 04 * * 1-5
+    branches: [ main ]
+    tags: ['v*.*.*']
+  workflow_dispatch:
 
 jobs:
-  check-call:
-    name: "♻️ Trunk"
-    uses: z-shell/.github/.github/workflows/trunk-call.yml@main
-#    secrets:
-#      TRUNK_TOKEN: ${{ secrets.TRUNK_TOKEN }}
-#    with:
-#      RUN_ARGS: 'npm i -g pnpm && pnpm i -r'
-#      TRUNK_PATH: ''
-#      GITHUB_REF_NAME: ''
-#      TRUNK_CHECK_MODE: 'all'
-#      TRUNK_ARGUMENTS: ''
-#      INPUT_LABEL: ''
-#      RUN_ARGS: 'echo FunnyBunnyWithSomeMoney'
-#      RUN_SHELL: 'bash'
-#      RUN_NODE: 'false'
-#      RUN_NODE_VERSION: '16'
-#      RUN_NODE_ARGS: 'npm --version'
+  deploy:
+    name: '🚀 Deploy'
+    uses: z-shell/.github/.github/workflows/deploy-call.yml@main
+    secrets:
+      personal_token: ${{ secrets.GH_PAT }}
+#     deploy_key: ''
+    with:
+#     external_repository: ''
+#     publish_branch: ''
+#     publish_dir: ''
+#     destination_dir: ''
+#     cname: ''
+     keep_files: true
+     allow_empty_commit: true
