--- a/.github/workflows/trunk-call.yml
+++ b/.github/workflows/trunk-call.yml
@@ -1,9 +1,9 @@
 ---
-name: '⭕ Trunk'
+name: "⭕ Trunk"
 on:
   push:
-    branches: ['main']
-    tags: ['v*.*.*']
+    branches: ["main"]
+    tags: ["v*.*.*"]
   pull_request:
     types: [opened, synchronize]
   schedule:
@@ -12,7 +12,7 @@ on:
 
 jobs:
   check-call:
-    name: '⚡'
+    name: "⚡"
     uses: z-shell/.github/.github/workflows/trunk-call.yml@main
 #    secrets:
 #      trunk_token: ${{ secrets.TRUNK_TOKEN }}
