--- a/.github/workflows/trunk-call.yml
+++ b/.github/workflows/trunk-call.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch: {}
 
 jobs:
-  check-call:
+  check:
     name: "⚡"
     uses: z-shell/.github/.github/workflows/trunk-call.yml@main
 #    secrets:
