modified:   .github/workflows/deploy.yml 	renamed:    .markdownlint.yaml -> .trunk/.markdownlint.yaml 	modified:   .trunk/trunk.yaml 	modified:   content/readme.md 	modified:   layouts/404.html 	modified:   layouts/partials/gitalk.html

--- a/.github/workflows/trunk-call.yml
+++ b/.github/workflows/trunk-call.yml
@@ -14,16 +14,16 @@ jobs:
   check:
     name: "⚡"
     uses: z-shell/.github/.github/workflows/trunk-call.yml@main
-#    secrets:
-#      trunk_token: ${{ secrets.TRUNK_TOKEN }}
-#    with:
-#      trunk_path: ''
-#      cache: ''
-#      upload-series: ''
-#      check-mode: ''
-#      arguments: ''
-#      call_arguments: 'npm i -g pnpm && pnpm i -r'
-#      shell: ''
+    #    secrets:
+    #      trunk_token: ${{ secrets.TRUNK_TOKEN }}
+    with:
+      #      trunk_path: ''
+      #      cache: ''
+      #      upload-series: ''
+      check-mode: "all"
+      #      arguments: ''
+      call_arguments: "npm i -g pnpm && pnpm i -r"
+      shell: "zsh"
 #      RUN_NODE: ''
 #      RUN_NODE_VERSION: ''
 #      RUN_NODE_ARGS: ''
