--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ pygmentsUseClasses = true
 
 [params]
 author = "Z-Shell Community"
-description = "A Swiss Army Knife for Zsh Unix shell, designed to glue everything together. A toolchain that works for us."
+description = "A Swiss Army Knife for Zsh - Unix shell. Designed to glue everything together to have a toolchain that works for us."
 #  github = "z-shell"
 #  facebook = ""
 #  twitter = "zshell_zi"
@@ -18,7 +18,7 @@ description = "A Swiss Army Knife for Zsh Unix shell, designed to glue everythin
 email = "team@zshell.dev"
 url = "https://github.zshell.dev"
 keywords = "zsh, github, toolchain"
-rss = false
+rss = true
 lastmod = true
 userStatusEmoji = ""
 favicon = "images/avatar.png"
@@ -45,10 +45,10 @@ icon = "https://github.com/z-shell.png"
 title = "digital-clouds"
 href = "https://github,com/digital-clouds"
 icon = "https://github.com/digital-clouds.png"
-[[params.links]]
-title = "ss-o"
-href = "https://github,com/ss-o"
-icon = "https://github.com/ss-o.png"
+#[[params.links]]
+#title = "ss-o"
+#href = "https://github,com/ss-o"
+#icon = "https://github.com/ss-o.png"
 
 [frontmatter]
 lastmod = ["lastmod", ":fileModTime", ":default"]
