--- a/.github/workflows/trunk-call.yml
+++ b/.github/workflows/trunk-call.yml
@@ -6,24 +6,11 @@ on:
     tags: ["v*.*.*"]
   pull_request:
     types: [opened, synchronize]
-  schedule:
-    - cron: 0 04 * * 1-5
+#  schedule:
+#    - cron: 0 04 * * 1-5
   workflow_dispatch: {}
 
 jobs:
   check:
     name: "⚡"
     uses: z-shell/.github/.github/workflows/trunk-call.yml@main
-    #    secrets:
-    #      trunk_token: ${{ secrets.TRUNK_TOKEN }}
-    with:
-      #      trunk_path: ''
-      #      cache: ''
-      #      upload-series: ''
-      check-mode: "all"
-      #      arguments: ''
-      call_arguments: "npm i -g pnpm && pnpm i -r"
-      shell: "zsh"
-#      RUN_NODE: ''
-#      RUN_NODE_VERSION: ''
-#      RUN_NODE_ARGS: ''
