--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,26 +1,36 @@
 version: 0.1
 cli:
-  version: 0.13.0-beta
+  version: 0.17.0-beta
+  options:
+    - commands: [check, fmt]
+    - args: -y
+plugins:
+  sources:
+    - id: trunk
+      ref: v0.0.3
+      uri: https://github.com/trunk-io/plugins
 repo:
   repo:
     host: github.com
     owner: z-shell
     name: z-shell.github.io
-lint:
-  linters:
-    - name: markdownlint
-      command:
-        [markdownlint, -q, --config, .github/.markdownlint.yaml, "${target}"]
-      direct_configs: [.github/.markdownlint.yaml]
+actions:
   enabled:
-    - actionlint@1.6.13
-    - gitleaks@8.8.7
-    - markdownlint@0.31.1
-    - prettier@2.6.2
+    - trunk-check-pre-push
+    - trunk-fmt-pre-commit
+    - trunk-cache-prune
+    - trunk-check-upgrade
+    - trunk-upgrade
+lint:
+  enabled:
     - shellcheck@0.8.0
+    - taplo@release-taplo-cli-0.7.0
+    - git-diff-check@SYSTEM
+    - actionlint@1.6.17
+    - gitleaks@8.12.0
+    - markdownlint@0.32.2
+    - prettier@2.7.1
     - shfmt@3.5.0
-    - svgo@2.8.0
-    - taplo@release-cli-0.6.3
   ignore:
     - linters: [ALL]
       paths:
@@ -31,3 +41,7 @@ lint:
       paths:
         - layouts/**
         - partials/**
+    - linters: [markdownlint]
+      paths:
+        - content/post/zsh/commands/print_cmd.md
+        - content/readme.md
