--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,6 +1,10 @@
 version: 0.1
+runtimes:
+  enabled:
+    - go@1.18.3
+    - node@16.14.2
 cli:
-  version: 0.17.0-beta
+  version: 0.18.0-beta
   options:
     - commands: [check, fmt]
     - args: -y
@@ -16,6 +20,7 @@ repo:
     name: z-shell.github.io
 actions:
   enabled:
+    - trunk-upgrade-available
     - trunk-check-pre-push
     - trunk-fmt-pre-commit
     - trunk-cache-prune
@@ -24,7 +29,7 @@ actions:
 lint:
   enabled:
     - shellcheck@0.8.0
-    - taplo@release-taplo-cli-0.7.0
+    - taplo@release-cli-0.6.0
     - git-diff-check@SYSTEM
     - actionlint@1.6.17
     - gitleaks@8.12.0
