--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,16 +4,20 @@ on:
   push:
     branches: [main]
     tags: ["v*.*.*"]
-  workflow_dispatch:
+  workflow_dispatch: {}
 
 env:
   CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}
+    timeout-minutes: 10
+    environment: production 
     steps:
       - uses: actions/checkout@v3
         with:
