--- a/.github/workflows/trunk-call.yml
+++ b/.github/workflows/trunk-call.yml
@@ -13,4 +13,4 @@ on:
 jobs:
   check:
     name: "⚡"
-    uses: z-shell/.github/.github/workflows/trunk-call.yml@main
+    uses: z-shell/.github/.github/workflows/trunk.yml@main
