modified:   .trunk/trunk.yaml

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://github.zshell.dev"
 languageCode = "en"
-title = "❮ Z-Shell ZI ❯"
+title = "❮ Z-Shell ❯"
 theme = "github-style"
 googleAnalytics = "G-4R9S46N2LB"
 pygmentsCodeFences = true
@@ -16,9 +16,9 @@ description = "A Swiss army knife for Zsh"
 #  instagram = ""
 #  tumblr = ""
 email = "team@zshell.dev"
-url = "https://github.zshell.dev"
+url = "https://www.zshell.dev"
 keywords = "zsh, github, toolchain"
-rss = true
+rss = false
 lastmod = true
 userStatusEmoji = ""
 favicon = "images/avatar.png"
