--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,39 +1,23 @@
 version: 0.1
-runtimes:
-  enabled:
-    - go@1.18.3
-    - node@16.14.2
 cli:
-  version: 1.1.0
-  options:
-    - commands: [check, fmt]
-    - args: -y
+  version: 1.4.0
 plugins:
   sources:
     - id: trunk
-      ref: v0.0.6
+      ref: v0.0.8
       uri: https://github.com/trunk-io/plugins
-repo:
-  repo:
-    host: github.com
-    owner: z-shell
-    name: z-shell.github.io
-actions:
-  enabled:
-    - trunk-upgrade-available
-    - trunk-check-pre-push
-    - trunk-fmt-pre-commit
-    - trunk-cache-prune
 lint:
   enabled:
-    - shellcheck@0.8.0
-    - taplo@0.8.0
-    - git-diff-check@SYSTEM
-    - actionlint@1.6.22
-    - gitleaks@8.15.1
-    - markdownlint@0.32.2
-    - prettier@2.7.1
+    - git-diff-check
     - shfmt@3.5.0
+    - taplo@0.7.0
+    - markdownlint@0.33.0
+    - svgo@3.0.2
+    - actionlint@1.6.23
+    - shellcheck@0.9.0
+    - gitleaks@8.15.3
+    - prettier@2.8.3
+    - oxipng@8.0.0
   ignore:
     - linters: [ALL]
       paths:
@@ -48,3 +32,13 @@ lint:
       paths:
         - content/post/zsh/commands/print_cmd.md
         - content/readme.md
+runtimes:
+  enabled:
+    - go@1.18.3
+    - node@18.12.1
+actions:
+  enabled:
+    - trunk-announce
+    - trunk-check-pre-push
+    - trunk-fmt-pre-commit
+    - trunk-upgrade-available
