--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: "gitsubmodule"
-    directory: "/themes/"
+    directory: "/"
     schedule:
       interval: "weekly"
   - package-ecosystem: "github-actions"
