--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,25 +1,28 @@
 version: 0.1
 cli:
-  version: 1.6.1
+  version: 1.22.2
 plugins:
   sources:
     - id: trunk
-      ref: v0.0.13
+      ref: v1.6.0
       uri: https://github.com/trunk-io/plugins
 lint:
   disabled:
+    - trufflehog
+    - renovate
+    - checkov
     - yamllint
   enabled:
-    - actionlint@1.6.23
+    - actionlint@1.7.1
     - git-diff-check
-    - gitleaks@8.16.1
-    - markdownlint@0.33.0
-    - oxipng@8.0.0
-    - prettier@2.8.4
-    - shellcheck@0.9.0
-    - shfmt@3.5.0
-    - svgo@3.0.2
-    - taplo@0.7.0
+    - gitleaks@8.18.4
+    - markdownlint@0.41.0
+    - oxipng@9.1.1
+    - prettier@3.3.2
+    - shellcheck@0.10.0
+    - shfmt@3.6.0
+    - svgo@3.3.2
+    - taplo@0.8.1
   ignore:
     - linters: [ALL]
       paths:
@@ -36,7 +39,7 @@ lint:
         - content/readme.md
 runtimes:
   enabled:
-    - go@1.19.5
+    - go@1.21.0
     - node@18.12.1
     - python@3.10.8
 actions:
